<?xml version="1.0"?>
<package>
  <name>bwi_grasp</name>
  <version>0.0.0</version>
  <description>The bwi_grasp package</description>

  <maintainer email="samgunn111@gmail.com">Sam Gunn</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<!--  <build_depend>geometry_msgs</build_depend> -->
  <build_depend>kinova_msgs</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>message_generation</build_depend>
  <!--  <build_depend>tf</build_depend> -->
  <!--  <build_depend>tf_conversions</build_depend> -->
 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>std_msgs</run_depend>
  <run_depend>kinova_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <!--  <run_depend>tf</run_depend> -->
  <!--  <run_depend>tf_conversions</run_depend> -->
  <!--  <run_depend>geometry_msgs</run_depend> -->
  <!--  <run_depend>eigen_conversions</run_depend> -->

  <export></export>
</package>
